--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -8,7 +8,7 @@
 */
 
 /* Reset */
-	
+
 	html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
 		margin: 0;
 		padding: 0;
@@ -3812,9 +3812,9 @@
 	body.is-mobile.landing #footer {
 		background-color: #1d242a;
 	}
-	
-	
-	
+
+
+
 	/*custom by annie*/
 	.card-body{
 		padding-bottom: 20px;
@@ -3822,4 +3822,7 @@
 	#faq{
 	    border-bottom: none;
 	    pointer-events: none;
+	}
+	#sched{
+		color:inherit;
 	}
