--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -18,6 +18,27 @@
 		vertical-align: baseline;
 	}
 
+	#video-background {
+	/*  making the video fullscreen  */
+	margin: 0;
+padding: 0;
+/*  Background fallback in case of IE8 & down, or in case video doens't load, such as with slower connections  */
+background: #333;
+background-attachment: fixed;
+background-size: cover;
+	  position: fixed;
+	  right: 0;
+	  bottom: 0;
+	  min-width: 100%;
+	  min-height: 100%;
+	  width: auto;
+	  height: auto;
+	  z-index: -100;
+	}
+
+
+
+
 	article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
 		display: block;
 	}
@@ -2953,7 +2974,17 @@
 			}
 
 		.wrapper.style4 {
-			background-color: transparent;
+			/*background-color: transparent;*/
+				padding: 12em 0 10em 0 ;
+				background-image: -moz-linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("http://source.unsplash.com/icyZmdkCGZ0");
+				background-image: -webkit-linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("http://source.unsplash.com/icyZmdkCGZ0");
+				background-image: -ms-linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("http://source.unsplash.com/icyZmdkCGZ0");
+				background-image: linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("http://source.unsplash.com/icyZmdkCGZ0");
+				background-attachment: fixed;
+				background-position: center center;
+				background-repeat: no-repeat;
+				background-size: cover;
+				text-align: center;
 		}
 
 		.wrapper.style5 {
